add image field to restourant

--- a/api/food/models/food.settings.json
+++ b/api/food/models/food.settings.json
@@ -15,8 +15,8 @@
       "unique": true
     },
     "category": {
-      "model": "category",
-      "via": "foods"
+      "via": "foods",
+      "model": "category"
     }
   }
 }
