--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -15,13 +15,13 @@
       "unique": true
     },
     "restaurants": {
-      "collection": "restaurant",
       "via": "categories",
+      "collection": "restaurant",
       "dominant": true
     },
     "foods": {
-      "via": "category",
-      "collection": "food"
+      "collection": "food",
+      "via": "category"
     }
   }
 }
